# neur

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.py  main.cpp
.github/workflows/: ccpp.yml
include/: brain.h  layer.h  wrapper.h
include/neur/: activations.h  brain.h  layer.h  logger.h  multiplier_impl.h  neur.h  wrapper.h
include/neur/genetics/: chromosome.h
include/neur/io/: loader.h  saver.h
tests/: test_brain_common.cpp  test_brain_io.cpp
